# advent-of-code-cpp

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_and_test.yml  push.yml  test.yml
cmake/Modules/: AddDay.cmake
days/: CMakeLists.txt
days/day01/: CMakeLists.txt  main.cpp
days/day02/: CMakeLists.txt  main.cpp
days/day03/: CMakeLists.txt  main.cpp
days/day04/: CMakeLists.txt  main.cpp
days/day05/: CMakeLists.txt  main.cpp
days/day06/: CMakeLists.txt  main.cpp
days/day07/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
days/day08/: CMakeLists.txt  main.cpp
days/day09/: CMakeLists.txt  main.cpp
days/day10/: CMakeLists.txt  main.cpp
days/day11/: CMakeLists.txt  main.cpp
days/day12/: CMakeLists.txt  main.cpp
days/day13/: CMakeLists.txt  main.cpp
days/day14/: CMakeLists.txt  main.cpp
days/day15/: CMakeLists.txt  main.cpp
days/day16/: main.cpp
days/day17/: main.cpp
days/day18/: main.cpp
days/day19/: main.cpp
days/day20/: main.cpp
days/day21/: main.cpp
days/day22/: main.cpp
days/day23/: main.cpp
days/day24/: main.cpp
days/day25/: main.cpp
include/aoc/: aoc.hpp  intcode.hpp
include/aoc2020/: aoc2020.hpp
puzzles/: CMakeLists.txt
puzzles/2019/: CMakeLists.txt
puzzles/2019/day01/: main.cpp
puzzles/2019/day02/: main.cpp
puzzles/2019/day03/: main.cpp
puzzles/2020/: CMakeLists.txt
puzzles/2020/day01/: main.cpp
puzzles/2020/day02/: main.cpp
puzzles/2020/day03/: main.cpp
puzzles/2020/day04/: main.cpp
puzzles/2020/day05/: main.cpp
puzzles/2020/day06/: main.cpp
puzzles/2020/day07/: main.cpp
puzzles/2020/day08/: main.cpp
puzzles/2020/day09/: main.cpp
puzzles/2020/day10/: main.cpp
puzzles/2020/day11/: main.cpp
puzzles/2020/day12/: main.cpp
puzzles/2020/day13/: main.cpp
puzzles/2020/day14/: main.cpp
puzzles/2020/day15/: main.cpp
puzzles/2020/day16/: main.cpp
puzzles/2020/day17/: main.cpp
puzzles/2020/day18/: main.cpp
puzzles/2020/day19/: main.cpp
puzzles/2020/day20/: main.cpp
puzzles/2020/day21/: main.cpp
puzzles/2020/day22/: main.cpp
puzzles/2020/day23/: main.cpp
puzzles/2020/day24/: main.cpp
puzzles/2020/day25/: main.cpp
puzzles/2021/: CMakeLists.txt
puzzles/2021/day01/: main.cpp
puzzles/2021/day02/: main.cpp
puzzles/2021/day03/: main.cpp
puzzles/2021/day04/: main.cpp
puzzles/2021/day05/: main.cpp
puzzles/2021/day06/: main.cpp
puzzles/2021/day07/: main.cpp
puzzles/2021/day08/: main.cpp
puzzles/2021/day09/: main.cpp
puzzles/2021/day10/: main.cpp
puzzles/2021/day11/: main.cpp
puzzles/2021/day12/: main.cpp
puzzles/2021/day13/: main.cpp
puzzles/2021/day14/: main.cpp
puzzles/2021/day15/: main.cpp
puzzles/2021/day16/: main.cpp
puzzles/2021/day17/: main.cpp
puzzles/2021/day18/: main.cpp
puzzles/2021/day19/: main.cpp
puzzles/2021/day20/: main.cpp
puzzles/2021/day21/: main.cpp
puzzles/2021/day22/: main.cpp
puzzles/2021/day23/: main.cpp
puzzles/2021/day24/: main.cpp
puzzles/2021/day25/: main.cpp
puzzles/day_template/: main.cpp
src/: aoc.cpp  aoc2020.cpp  aoc_tests.cpp  intcode.cpp  intcode_tests.cpp
tests/: CMakeLists.txt  day01.cpp  day02.cpp  day05.cpp  main.cpp
